implemented UPS button & LTL button

--- a/manifest.json
+++ b/manifest.json
@@ -17,16 +17,17 @@
 	  	{
 	  		"matches": ["<all_urls>"],
 	  		"js":["js/popup.js"]
-	  	},
-	  	{
-	  		"matches": ["<all_urls>"],
-	  		"js":["js/content.js"]
 	  	}
-	  	// , 
+	  	// ,
 	  	// {
-	  	// 	"matches" : ["*://*.partners.wayfair.com/*"],
+	  	// 	"matches": ["<all_urls>"],
 	  	// 	"js":["js/content.js"]
 	  	// }
+	  	, 
+	  	{
+	  		"matches" : ["*://*.partners.wayfair.com/*"],
+	  		"js":["productSpec/productSpecSheet.json"]
+	  	}
 	  ],
 
 
