--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,33 @@
 
 	"name": "Wayfair Extension",
 	"description": "This extension will help to simplifiy wayfair order processing.",
-	"version": "1.0",
+	"version": "2.0",
+	"background":
+	{
+		"scripts":[
+			"lib/jquery-3.2.1.min.js",
+			"js/background.js"
+		]
+	},
 	"content_scripts": 
 	[
 		{
 			"matches" : ["*://*.partners.wayfair.com/*"],
 			"js":[
-				"lib/jquery-3.2.1.min.js"
+				"lib/jquery-3.2.1.min.js",
+				"js/content.js"
 				// ,"lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"
 			],
 			"css": [
 				// "lib/bootstrap-3.3.7-dist/css/bootstrap.css",
 				"css/content.css"
+			]
+		},
+		{
+			"matches": ["*://*.developer.chrome.com/*"],
+			"js":[
+				"lib/jquery-3.2.1.min.js",
+				"js/content.js"
 			]
 		}
 	],
